--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RELATÓRIOS DE MELHORIAS ALBEV</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <div class="conteudo">
+        <div class="logo_albev">
+            <img src="logo.png" alt="LOGO ALBEV" width="100px" height="100px">
+        </div>
 
-    <div style="height: 700px; width: 100%;">
-        <embed src="MELHORIAS IMPLEMENTADAS NA ALBEV.pdf" type="application/pdf" width="100%" height="100%">
+
+        <div class="buttons">
+            <button>MELHORIAS SEGURANÇA</button>
+            <button>MELHORIAS CONSERVAÇÃO E JARDINAGEM</button>
+            <button>MELHORIAS ETA</button>
+            <button>DADOS ESTATÍSTICOS</button>
+        </div>
     </div>
 </body>
 </html>
