--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 
         <div class="buttons">
-            <button>MELHORIAS SEGURANÇA</button>
-            <button>MELHORIAS CONSERVAÇÃO E JARDINAGEM</button>
-            <button>MELHORIAS ETA</button>
-            <button>DADOS ESTATÍSTICOS</button>
+            <a href="https://form.jotform.com/240652914213652">MELHORIAS SEGURANÇA</a>
+            <a href="https://form.jotform.com/240652983514662">MELHORIAS CONSERVAÇÃO E JARDINAGEM</a>
+            <a href="https://form.jotform.com/240653316687664">MELHORIAS ETA</a>
+            <a>DADOS ESTATÍSTICOS</a>
         </div>
     </div>
 </body>
