--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
         <div class="buttons">
-            <a href="https://form.jotform.com/240652914213652">MELHORIAS SEGURANÇA</a>
+            <a href="seguranca.html">MELHORIAS SEGURANÇA</a>
             <a href="https://form.jotform.com/240652983514662">MELHORIAS CONSERVAÇÃO E JARDINAGEM</a>
             <a href="https://form.jotform.com/240653316687664">MELHORIAS ETA</a>
             <a>DADOS ESTATÍSTICOS</a>
