--- a/seguranca.html
+++ b/seguranca.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="body_seguranca">
     
     <div class="imagens">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0001.jpg">
