--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.5">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RELATÓRIOS DE MELHORIAS ALBEV</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
@@ -17,8 +17,8 @@
 
         <div class="buttons">
             <a href="seguranca.html">MELHORIAS SEGURANÇA</a>
-            <a href="https://form.jotform.com/240652983514662">MELHORIAS CONSERVAÇÃO E JARDINAGEM</a>
-            <a href="https://form.jotform.com/240653316687664">MELHORIAS ETA</a>
+            <a href="conservacao.html">MELHORIAS CONSERVAÇÃO E JARDINAGEM</a>
+            <a href="eta.html">MELHORIAS ETA</a>
             <a>DADOS ESTATÍSTICOS</a>
         </div>
     </div>
