--- a/seguranca.html
+++ b/seguranca.html
@@ -22,6 +22,8 @@
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0010.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0011.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0012.jpg">
+        <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0096.jpg">
+        <iframe id="video_monitoramento" width="1500" height="602" src="https://www.youtube.com/embed/ofg1GmQB-gA" title="CONCLUSÃO DE MONITORAMENTO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0013.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0014.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0015.jpg">
