--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="seguranca.html">MELHORIAS SEGURANÇA</a>
             <a href="conservacao.html">MELHORIAS CONSERVAÇÃO E JARDINAGEM</a>
             <a href="eta.html">MELHORIAS ETA</a>
-            <a>DADOS ESTATÍSTICOS</a>
+            <a href="estastisticos.html">DADOS ESTATÍSTICOS</a>
         </div>
     </div>
 </body>
