--- a/seguranca.html
+++ b/seguranca.html
@@ -31,6 +31,7 @@
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0017.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0018.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0019.jpg">
+        <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0020a.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0020.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0021.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0022.jpg">
