base_comparacao_eta

--- a/estastisticos.html
+++ b/estastisticos.html
@@ -15,7 +15,10 @@
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0001.jpg">
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0002.jpg">
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0003.jpg">
+        
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0004.jpg">
+        <img class="pdfs" src="imgs/estastisticos/base_comparacao_eta_page-0005.jpg" width="2000px>
+        
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0005.jpg">
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0006.jpg">
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0007.jpg">
