--- a/seguranca.html
+++ b/seguranca.html
@@ -18,6 +18,7 @@
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0006.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0007.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0008.jpg">
+        <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0009a.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0009.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0010.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0011.jpg">
@@ -29,7 +30,7 @@
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0015.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0016.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0017.jpg">
-        <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0018.jpg">
+        <img class="pdfs" src="imgs/seguranca/PROJETO DE SEGURANÇA FINALIZADO_page-0001.jpg" width="1500px">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0019.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0020a.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0020.jpg">
