--- a/estastisticos.html
+++ b/estastisticos.html
@@ -14,10 +14,11 @@
         <img class="pdfs" src="imgs/estastisticos/CONSERVAÇÃO_page-0001.jpg" width="2000px">
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0001.jpg">
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0002.jpg">
+        <img class="pdfs" src="imgs/estastisticos/ETA_page-0001.jpg" width="2000px">
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0003.jpg">
         
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0004.jpg">
-        <img class="pdfs" src="imgs/estastisticos/base_comparacao_eta_page-0005.jpg" width="2000px>
+        <img class="pdfs" src="imgs/estastisticos/base_comparacao_eta_page-0005.jpg" width="2000px">
         
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0005.jpg">
         <img class="pdfs" src="imgs/estastisticos/Apresentação1_page-0006.jpg">
