--- a/conservacao.html
+++ b/conservacao.html
@@ -11,6 +11,7 @@
     
     <div class="imagens">
         <img class="pdfs" src="imgs/conservacao/ALBEV Aprimorada_ Destaques das Melhorias Implementadas v.3_page-0001.jpg">
+        <img class="pdfs" src="imgs/estastisticos/CONSERVAÇÃO_page-0001.jpg" width="1500px">
         <img class="pdfs" src="imgs/conservacao/ALBEV Aprimorada_ Destaques das Melhorias Implementadas v.3_page-0002.jpg">
         <img class="pdfs" src="imgs/conservacao/ALBEV Aprimorada_ Destaques das Melhorias Implementadas v.3_page-0003.jpg">
         <img class="pdfs" src="imgs/conservacao/ALBEV Aprimorada_ Destaques das Melhorias Implementadas v.3_page-0004.jpg">
