--- a/eta.html
+++ b/eta.html
@@ -11,6 +11,7 @@
     
     <div class="imagens">
         <img class="pdfs" src="imgs/eta/RELATÓRIO ETA 2023-5_page-0001.jpg">
+        <img class="pdfs" src="imgs/estastisticos/ETA_page-0001.jpg" width="2000px">
         <iframe class="video_monitoramento" width="1990px" height="602" src="https://www.youtube.com/embed/sWoxtlmy4BU" title="ETA ALBEV - DEPOIS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <img class="pdfs" src="imgs/eta/RELATÓRIO ETA 2023-5_page-0002.jpg">
         <img class="pdfs" src="imgs/eta/RELATÓRIO ETA 2023-5_page-0003.jpg">
