--- a/eta.html
+++ b/eta.html
@@ -94,6 +94,7 @@
         <img class="pdfs" src="imgs/eta/RELATÓRIO ETA 2023-5_page-0078.jpg">
         <img class="pdfs" src="imgs/eta/RELATÓRIO ETA 2023-5_page-0079.jpg">
         <img class="pdfs" src="imgs/eta/RELATÓRIO ETA 2023-5_page-0080.jpg">
+        <img class="pdfs" src="imgs/eta/MAPA_ETA_RESERVATORIOS_V2_page-0001-min.jpg" width="2000px">
         <img class="pdfs" src="imgs/eta/RELATÓRIO ETA 2023-5_page-0081.jpg">
     </div>
 </body>
