--- a/seguranca.html
+++ b/seguranca.html
@@ -11,6 +11,8 @@
     
     <div class="imagens">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0001.jpg">
+        <img class="pdfs" src="imgs/seguranca/GAST_UNID_APOIO_page-0001.jpg">
+        <img class="pdfs" src="imgs/seguranca/FUNC_APOIO_page-0001.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0002.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0003.jpg">
         <img class="pdfs" src="imgs/seguranca/ALBEV Aprimorada_ Melhorias Segurança_page-0004.jpg">
